--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </li>
                 <li class="header-menu-item">Início</li>
                 <li class="header-menu-item">Sobre Mim</li>
-                <li class="header-menu-item">Portfólio</li>
+                <li class="header-menu-item">Trabalhos</li>
                 <li class="header-menu-item">Contato</li>
             </ul>
             <label class="hamburger-icon" for="menu-control">
@@ -34,43 +34,72 @@
     <section class="home">
         <div class="home-content container">
             <div class="text-content">
-                <p>Olá!</p>
-                <h1>Sou o Fernando</h1>
-                <small>Desenvolvedor de sistemas.</small>
-            </div>
-            <div class="picture container">
-                <img class="picture-content" src="/img/minha-foto-3.webp" alt="Minha Foto">
+                <p>Olá, eu sou</p>
+                <h1>Fernando Kalke</h1>
+                <small>Desenvolvedor Web</small>
             </div>
         </div>
-        <div class="social container">
-            <a href="https://github.com/fkalke" class="social-item">
-                <img class="social-item-img" src="/img/icons/github-icon.svg" alt="Perfil no Github">
-            </a>
-            <a href="https://github.com/fkalke" class="social-item">
-                <img class="social-item-img" src="/img/icons/linkedin-icon.svg" alt="Perfil no Linkedin">
-            </a>
+        <div class="home-background">
+            <video autoplay loop>
+                <source src="/img/programming.webm" type="video/webm">
+            </video>
         </div>
     </section>
     <section class="about-me">
         <div class="about-me-content container">
-            <h1>SOBRE MIM</h1>
-            <p>O dinamismo e a constante atualização da tecnologia não fizeram apenas com que eu me tornasse um
-                apaixonado
-                pela área, bem como me mostram o profissional que eu busco ser: dinâmico e em busca de constante
-                atualização. A curiosidade e a vontade de testar e aprender me moveram no início, só então depois vieram
-                os
-                cursos técnicos e hoje, a faculdade de Análise e Desenvolvimento de Sistemas. Atual Gerente de TI da
-                prefeitura da minha cidade, porém, com sede de aprendizado o suficiente para estar disposto a testar
-                novos
-                rumos e oportunidades. A tecnologia hoje, causa transformações em nossas vidas, e é ao lado dessa
-                transformação que eu pretendo estar.</p>
+            <div class="about-me-content-img">
+                <img src="/img/minha-foto-4.png" alt="Minha foto">
+            </div>
+            <div class="about-me-content-text">
+                <h1>SOBRE MIM</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="about-me-links">
+                    <a class="about-me-links-item cv" href="#">
+                        <img class="social-item-img" src="/img/icons/download-icon.svg"
+                            alt="Download do currículo">Download CV</a>
+                    <a class="about-me-links-item github" href="https://github.com/fkalke">
+                        <img class="social-item-img" src="/img/icons/github-icon.svg" alt="Perfil no Github">GitHub</a>
+                    <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke">
+                        <img class="social-item-img" src="/img/icons/linkedin-icon.svg"
+                            alt="Perfil no Linkedin">Linkedin</a>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="works">
     </section>
     <section class="contact">
+        <div class="contact-content container">
+            <h1>CONTATO</h1>
+            <div class="contact-methods">
+                <div class="contact-methods-item">
+                    <p>Ligação/Whatsapp</p>
+                    <small>(27) 99877-9205</small>
+                    <a class="contact-methods-item-link whatsapp" href="#">
+                        <img class="social-item-img" src="/img/icons/whatsapp-icon.svg"
+                            alt="Enviar mensagem no Whatsapp">
+                        Enviar Mensagem
+                    </a>
+                </div>
+                <div class="contact-methods-item">
+                    <p>Mande um E-Mail</p>
+                    <small>fernando@kalke.com.br</small>
+                    <a class="contact-methods-item-link email" href="#">
+                        <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
+                        Enviar E-Mail
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <p>© 2022 - Todos os direitos reservados</p>
+    </footer>
 </body>
 
 </html>
