adicionado a sessao de projetos recentes

--- a/index.html
+++ b/index.html
@@ -71,29 +71,85 @@
             </div>
         </div>
     </section>
+    <section class="technologies">
+        <div class="technologies-content container">
+            <h1>TENHO HABILIDADES EM</h1>
+            <div class="technologies-content-grid">
+                <img class="technologies-content-grid-item" src="/img/icons/html.webp" alt="HTML5">
+                <img class="technologies-content-grid-item" src="/img/icons/css.webp" alt="CSS3">
+                <img class="technologies-content-grid-item" src="/img/icons/bootstrap.webp" alt="Bootstrap">
+                <img class="technologies-content-grid-item" src="/img/icons/spring.webp" alt="Spring Boot">
+                <img class="technologies-content-grid-item" src="/img/icons/java.webp" alt="Java">
+                <img class="technologies-content-grid-item" src="/img/icons/mysql.webp" alt="Mysql">
+            </div>
+        </div>
+    </section>
     <section class="works">
+        <div class="works-content container">
+            <h1> PROJETOS RECENTES</h1>
+            <div class="works-content-grid">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="/img/eobras.webp" alt="rover" />
+                    </div>
+                    <div class="card-body">
+                        <h4>
+                            E-Obras
+                        </h4>
+                        <p>
+                            Sistema de cadastro, gerenciamento e consulta de obras do município de Domingos Martins
+                        </p>
+                        <div class="used-technologies">
+                            <span class="tag tag-html">html</span>
+                            <span class="tag tag-css">css</span>
+                            <span class="tag tag-js">javascript</span>
+                            <span class="tag tag-bootstrap">bootstrap</span>
+                            <span class="tag tag-spring">spring</span>
+                            <span class="tag tag-java">java</span>
+                            <span class="tag tag-mysql">mysql</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <img src="/img/portfolio.webp" alt="rover" />
+                    </div>
+                    <div class="card-body">
+                        <h4>
+                            Portfólio
+                        </h4>
+                        <p>
+                            Projeto do meu portfólio, disponível no GitHub
+                        </p>
+                        <div class="used-technologies">
+                            <span class="tag tag-html">html</span>
+                            <span class="tag tag-css">css</span>
+                            <span class="tag tag-js">javascript</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="contact">
         <div class="contact-content container">
             <h1>CONTATO</h1>
-            <div class="contact-methods">
-                <div class="contact-methods-item">
-                    <p>Ligação/Whatsapp</p>
-                    <small>(27) 99877-9205</small>
-                    <a class="contact-methods-item-link whatsapp" href="#">
-                        <img class="social-item-img" src="/img/icons/whatsapp-icon.svg"
-                            alt="Enviar mensagem no Whatsapp">
-                        Enviar Mensagem
-                    </a>
-                </div>
-                <div class="contact-methods-item">
-                    <p>Mande um E-Mail</p>
-                    <small>fernando@kalke.com.br</small>
-                    <a class="contact-methods-item-link email" href="#">
-                        <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
-                        Enviar E-Mail
-                    </a>
-                </div>
+            <div class="contact-content-item">
+                <p>Ligação/Whatsapp</p>
+                <small>(27) 99877-9205</small>
+                <a class="contact-content-item-link whatsapp" href="#">
+                    <img class="social-item-img" src="/img/icons/whatsapp-icon.svg" alt="Enviar mensagem no Whatsapp">
+                    Enviar Mensagem
+                </a>
+            </div>
+            <div class="contact-content-item">
+                <p>Mande um E-Mail</p>
+                <small>fernando@kalke.com.br</small>
+                <a class="contact-content-item-link email" href="#">
+                    <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
+                    Enviar E-Mail
+                </a>
             </div>
         </div>
     </section>
