--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         <img class="close-icon-img" src="/img/icons/close-icon.svg" alt="Fechar menu">
                     </label>
                 </li>
-                <li class="header-menu-item">Início</li>
-                <li class="header-menu-item">Sobre Mim</li>
-                <li class="header-menu-item">Trabalhos</li>
-                <li class="header-menu-item">Contato</li>
+                <li class="header-menu-item"><a href="#about" onclick="fecharMenu()">Sobre Mim</a></li>
+                <li class="header-menu-item"><a href="#technologies" onclick="fecharMenu()">Habilidades</a></li>
+                <li class="header-menu-item"><a href="#works" onclick="fecharMenu()">Trabalhos</a></li>
+                <li class="header-menu-item"><a href="#contact" onclick="fecharMenu()">Contato</a></li>
             </ul>
             <label class="hamburger-icon" for="menu-control">
                 <img src="/img/icons/hamburger.svg" alt="Abrir menu">
@@ -45,7 +45,7 @@
             </video>
         </div>
     </section>
-    <section class="about-me">
+    <section class="about-me" id="about">
         <div class="about-me-content container">
             <div class="about-me-content-img">
                 <img src="/img/minha-foto-4.png" alt="Minha foto">
@@ -59,19 +59,19 @@
                     with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
                     publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 <div class="about-me-links">
-                    <a class="about-me-links-item cv" href="#">
+                    <a class="about-me-links-item cv" href="/files/curriculo.pdf" target="_blank">
                         <img class="social-item-img" src="/img/icons/download-icon.svg"
                             alt="Download do currículo">Download CV</a>
-                    <a class="about-me-links-item github" href="https://github.com/fkalke">
+                    <a class="about-me-links-item github" href="https://github.com/fkalke" target="_blank">
                         <img class="social-item-img" src="/img/icons/github-icon.svg" alt="Perfil no Github">GitHub</a>
-                    <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke">
+                    <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke" target="_blank">
                         <img class="social-item-img" src="/img/icons/linkedin-icon.svg"
                             alt="Perfil no Linkedin">Linkedin</a>
                 </div>
             </div>
         </div>
     </section>
-    <section class="technologies">
+    <section class="technologies" id="technologies">
         <div class="technologies-content container">
             <h1>TENHO HABILIDADES EM</h1>
             <div class="technologies-content-grid">
@@ -84,11 +84,11 @@
             </div>
         </div>
     </section>
-    <section class="works">
+    <section class="works" id="works">
         <div class="works-content container">
             <h1> PROJETOS RECENTES</h1>
             <div class="works-content-grid">
-                <div class="card">
+                <a href="https://obras.domingosmartins.es.gov.br" class="card" target="_blank">
                     <div class="card-header">
                         <img src="/img/eobras.webp" alt="rover" />
                     </div>
@@ -109,9 +109,9 @@
                             <span class="tag tag-mysql">mysql</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="card">
+                <a href="https://github.com/fkalke/portfolio" class="card" target="_blank">
                     <div class="card-header">
                         <img src="/img/portfolio.webp" alt="rover" />
                     </div>
@@ -128,25 +128,25 @@
                             <span class="tag tag-js">javascript</span>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="contact-content container">
             <h1>CONTATO</h1>
             <div class="contact-content-item">
-                <p>Ligação/Whatsapp</p>
+                <h4>Ligação/Whatsapp</h4>
                 <small>(27) 99877-9205</small>
-                <a class="contact-content-item-link whatsapp" href="#">
+                <a class="contact-content-item-link whatsapp" href="https://wa.me/+5527998779205?text=Ol%C3%A1,%20Fernando!%20Estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20seu%20portf%C3%B3lio." target="_blank">
                     <img class="social-item-img" src="/img/icons/whatsapp-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar Mensagem
                 </a>
             </div>
             <div class="contact-content-item">
-                <p>Mande um E-Mail</p>
+                <h4>Mande um E-Mail</h4>
                 <small>fernando@kalke.com.br</small>
-                <a class="contact-content-item-link email" href="#">
+                <a class="contact-content-item-link email" href="mailto:fernando@kalke.com.br?subject=Contato Portfólio">
                     <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar E-Mail
                 </a>
@@ -156,6 +156,10 @@
     <footer class="footer">
         <p>© 2022 - Todos os direitos reservados</p>
     </footer>
+    <button onclick="topFunction()" id="topBtn" class="topBtn" title="Go to top">
+        <img src="/img/icons/arrow.svg" alt="Botão voltar ao topo">
+    </button>
+    <script src="/js/menu.js" type="text/javascript"></script>
 </body>
 
 </html>
