--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/icons/favicon-32x32.png" />
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Portfólio | Fernando Kalke</title>
+    <meta name="description" content="Meu nome é Fernando e eu desenvolvo aplicações para a Web." />
+    <meta property="og:image" content="/img/oggimage.webp" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="400" />
 </head>
 
 <body>
@@ -23,7 +29,7 @@
                 </li>
                 <li class="header-menu-item"><a href="#about" onclick="fecharMenu()">Sobre Mim</a></li>
                 <li class="header-menu-item"><a href="#technologies" onclick="fecharMenu()">Habilidades</a></li>
-                <li class="header-menu-item"><a href="#works" onclick="fecharMenu()">Trabalhos</a></li>
+                <li class="header-menu-item"><a href="#works" onclick="fecharMenu()">Projetos</a></li>
                 <li class="header-menu-item"><a href="#contact" onclick="fecharMenu()">Contato</a></li>
             </ul>
             <label class="hamburger-icon" for="menu-control">
@@ -48,23 +54,24 @@
     <section class="about-me" id="about">
         <div class="about-me-content container">
             <div class="about-me-content-img">
-                <img src="/img/minha-foto-4.png" alt="Minha foto">
+                <img src="/img/minha-foto.webp" alt="Minha foto">
             </div>
             <div class="about-me-content-text">
                 <h1>SOBRE MIM</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Olá! Meu nome é Fernando e sou desenvolvedor Web iniciante. Estou cursando Análise e Desenvolvimento
+                    de sistemas, tenho na bagagem alguns cursos que andei realizando e sempre que posso estudo e busco
+                    praticar os conhecimentos adquiridos. Atualmente sou Gerente de
+                    TI da prefeitura da minha cidade onde recentemente desenvolvi um sistema para cadastro e
+                    acompanhamento das obras do município. Apaixonado por resolver problemas estou em busca de
+                    oportunidade para transição de carreira e atuar de vez como Desenvolvedor.</p>
                 <div class="about-me-links">
                     <a class="about-me-links-item cv" href="/files/curriculo.pdf" target="_blank">
                         <img class="social-item-img" src="/img/icons/download-icon.svg"
-                            alt="Download do currículo">Download CV</a>
+                            alt="Download do currículo">Currículo</a>
                     <a class="about-me-links-item github" href="https://github.com/fkalke" target="_blank">
                         <img class="social-item-img" src="/img/icons/github-icon.svg" alt="Perfil no Github">GitHub</a>
-                    <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke" target="_blank">
+                    <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke"
+                        target="_blank">
                         <img class="social-item-img" src="/img/icons/linkedin-icon.svg"
                             alt="Perfil no Linkedin">Linkedin</a>
                 </div>
@@ -97,7 +104,7 @@
                             E-Obras
                         </h4>
                         <p>
-                            Sistema de cadastro, gerenciamento e consulta de obras do município de Domingos Martins
+                            Sistema de cadastro, gerenciamento e consulta de obras do município de Domingos Martins - ES
                         </p>
                         <div class="used-technologies">
                             <span class="tag tag-html">html</span>
@@ -138,7 +145,9 @@
             <div class="contact-content-item">
                 <h4>Ligação/Whatsapp</h4>
                 <small>(27) 99877-9205</small>
-                <a class="contact-content-item-link whatsapp" href="https://wa.me/+5527998779205?text=Ol%C3%A1,%20Fernando!%20Estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20seu%20portf%C3%B3lio." target="_blank">
+                <a class="contact-content-item-link whatsapp"
+                    href="https://wa.me/+5527998779205?text=Ol%C3%A1,%20Fernando!%20Estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20seu%20portf%C3%B3lio."
+                    target="_blank">
                     <img class="social-item-img" src="/img/icons/whatsapp-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar Mensagem
                 </a>
@@ -146,7 +155,8 @@
             <div class="contact-content-item">
                 <h4>Mande um E-Mail</h4>
                 <small>fernando@kalke.com.br</small>
-                <a class="contact-content-item-link email" href="mailto:fernando@kalke.com.br?subject=Contato Portfólio">
+                <a class="contact-content-item-link email"
+                    href="mailto:fernando@kalke.com.br?subject=Contato Portfólio">
                     <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar E-Mail
                 </a>
