resolvido bug das imagens

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/icons/favicon-32x32.png" />
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="./img/icons/favicon-32x32.png" />
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Portfólio | Fernando Kalke</title>
     <meta name="description" content="Meu nome é Fernando e eu desenvolvo aplicações para a Web." />
-    <meta property="og:image" content="/img/oggimage.webp" />
+    <meta property="og:image" content="./img/oggimage.webp" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
@@ -24,7 +24,7 @@
             <ul class="header-menu">
                 <li class="close-icon">
                     <label class="hamburger-icon" for="menu-control">
-                        <img class="close-icon-img" src="/img/icons/close-icon.svg" alt="Fechar menu">
+                        <img class="close-icon-img" src="./img/icons/close-icon.svg" alt="Fechar menu">
                     </label>
                 </li>
                 <li class="header-menu-item"><a href="#about" onclick="fecharMenu()">Sobre Mim</a></li>
@@ -33,7 +33,7 @@
                 <li class="header-menu-item"><a href="#contact" onclick="fecharMenu()">Contato</a></li>
             </ul>
             <label class="hamburger-icon" for="menu-control">
-                <img src="/img/icons/hamburger.svg" alt="Abrir menu">
+                <img src="./img/icons/hamburger.svg" alt="Abrir menu">
             </label>
         </div>
     </header>
@@ -47,14 +47,14 @@
         </div>
         <div class="home-background">
             <video autoplay loop>
-                <source src="/img/programming.webm" type="video/webm">
+                <source src="./img/programming.webm" type="video/webm">
             </video>
         </div>
     </section>
     <section class="about-me" id="about">
         <div class="about-me-content container">
             <div class="about-me-content-img">
-                <img src="/img/minha-foto.webp" alt="Minha foto">
+                <img src="./img/minha-foto.webp" alt="Minha foto">
             </div>
             <div class="about-me-content-text">
                 <h1>SOBRE MIM</h1>
@@ -65,14 +65,14 @@
                     acompanhamento das obras do município. Apaixonado por resolver problemas estou em busca de
                     oportunidade para transição de carreira e atuar de vez como Desenvolvedor.</p>
                 <div class="about-me-links">
-                    <a class="about-me-links-item cv" href="/files/curriculo.pdf" target="_blank">
-                        <img class="social-item-img" src="/img/icons/download-icon.svg"
+                    <a class="about-me-links-item cv" href="./files/curriculo.pdf" target="_blank">
+                        <img class="social-item-img" src="./img/icons/download-icon.svg"
                             alt="Download do currículo">Currículo</a>
                     <a class="about-me-links-item github" href="https://github.com/fkalke" target="_blank">
-                        <img class="social-item-img" src="/img/icons/github-icon.svg" alt="Perfil no Github">GitHub</a>
+                        <img class="social-item-img" src="./img/icons/github-icon.svg" alt="Perfil no Github">GitHub</a>
                     <a class="about-me-links-item linkedin" href="https://www.linkedin.com/in/fernando-kalke"
                         target="_blank">
-                        <img class="social-item-img" src="/img/icons/linkedin-icon.svg"
+                        <img class="social-item-img" src="./img/icons/linkedin-icon.svg"
                             alt="Perfil no Linkedin">Linkedin</a>
                 </div>
             </div>
@@ -82,12 +82,12 @@
         <div class="technologies-content container">
             <h1>TENHO HABILIDADES EM</h1>
             <div class="technologies-content-grid">
-                <img class="technologies-content-grid-item" src="/img/icons/html.webp" alt="HTML5">
-                <img class="technologies-content-grid-item" src="/img/icons/css.webp" alt="CSS3">
-                <img class="technologies-content-grid-item" src="/img/icons/bootstrap.webp" alt="Bootstrap">
-                <img class="technologies-content-grid-item" src="/img/icons/spring.webp" alt="Spring Boot">
-                <img class="technologies-content-grid-item" src="/img/icons/java.webp" alt="Java">
-                <img class="technologies-content-grid-item" src="/img/icons/mysql.webp" alt="Mysql">
+                <img class="technologies-content-grid-item" src="./img/icons/html.webp" alt="HTML5">
+                <img class="technologies-content-grid-item" src="./img/icons/css.webp" alt="CSS3">
+                <img class="technologies-content-grid-item" src="./img/icons/bootstrap.webp" alt="Bootstrap">
+                <img class="technologies-content-grid-item" src="./img/icons/spring.webp" alt="Spring Boot">
+                <img class="technologies-content-grid-item" src="./img/icons/java.webp" alt="Java">
+                <img class="technologies-content-grid-item" src="./img/icons/mysql.webp" alt="Mysql">
             </div>
         </div>
     </section>
@@ -97,7 +97,7 @@
             <div class="works-content-grid">
                 <a href="https://obras.domingosmartins.es.gov.br" class="card" target="_blank">
                     <div class="card-header">
-                        <img src="/img/eobras.webp" alt="rover" />
+                        <img src="./img/eobras.webp" alt="rover" />
                     </div>
                     <div class="card-body">
                         <h4>
@@ -120,7 +120,7 @@
 
                 <a href="https://github.com/fkalke/portfolio" class="card" target="_blank">
                     <div class="card-header">
-                        <img src="/img/portfolio.webp" alt="rover" />
+                        <img src="./img/portfolio.webp" alt="rover" />
                     </div>
                     <div class="card-body">
                         <h4>
@@ -148,7 +148,7 @@
                 <a class="contact-content-item-link whatsapp"
                     href="https://wa.me/+5527998779205?text=Ol%C3%A1,%20Fernando!%20Estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20seu%20portf%C3%B3lio."
                     target="_blank">
-                    <img class="social-item-img" src="/img/icons/whatsapp-icon.svg" alt="Enviar mensagem no Whatsapp">
+                    <img class="social-item-img" src="./img/icons/whatsapp-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar Mensagem
                 </a>
             </div>
@@ -157,7 +157,7 @@
                 <small>fernando@kalke.com.br</small>
                 <a class="contact-content-item-link email"
                     href="mailto:fernando@kalke.com.br?subject=Contato Portfólio">
-                    <img class="social-item-img" src="/img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
+                    <img class="social-item-img" src="./img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar E-Mail
                 </a>
             </div>
@@ -167,9 +167,9 @@
         <p>© 2022 - Todos os direitos reservados</p>
     </footer>
     <button onclick="topFunction()" id="topBtn" class="topBtn" title="Go to top">
-        <img src="/img/icons/arrow.svg" alt="Botão voltar ao topo">
+        <img src="./img/icons/arrow.svg" alt="Botão voltar ao topo">
     </button>
-    <script src="/js/menu.js" type="text/javascript"></script>
+    <script src="./js/menu.js" type="text/javascript"></script>
 </body>
 
 </html>
