editado as informacoes de contato

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             </div>
             <div class="contact-content-item">
                 <h4>Mande um E-Mail</h4>
-                <small>fernando@kalke.com.br</small>
+                <small>fernando@nandocodes.com.br</small>
                 <a class="contact-content-item-link email"
-                    href="mailto:fernando@kalke.com.br?subject=Contato Portfólio">
+                    href="mailto:fernando@nandocodes.com.br?subject=Contato Portfólio">
                     <img class="social-item-img" src="./img/icons/email-icon.svg" alt="Enviar mensagem no Whatsapp">
                     Enviar E-Mail
                 </a>
