ajustes na responsividade

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="home-background">
-            <video autoplay loop>
+            <video poster="./img/thumbnail-home.webp" autoplay loop>
                 <source src="./img/programming.webm" type="video/webm">
             </video>
         </div>
@@ -166,7 +166,7 @@
     <footer class="footer">
         <p>© 2022 - Todos os direitos reservados</p>
     </footer>
-    <button onclick="topFunction()" id="topBtn" class="topBtn" title="Go to top">
+    <button type="button" onclick="topFunction()" id="topBtn" class="topBtn" title="Go to top">
         <img src="./img/icons/arrow.svg" alt="Botão voltar ao topo">
     </button>
     <script src="./js/menu.js" type="text/javascript"></script>
