Atualizacao de curriculo e outras informacoes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="about-me-content-text">
                 <h1>SOBRE MIM</h1>
-                <p>Olá! Meu nome é Fernando e sou desenvolvedor Web iniciante. Estou cursando Análise e Desenvolvimento
+                <p>Olá! Meu nome é Fernando e sou desenvolvedor Web iniciante. Estou finalizando a graduação em Análise e Desenvolvimento
                     de sistemas, tenho na bagagem alguns cursos que andei realizando e sempre que posso estudo e busco
                     praticar os conhecimentos adquiridos. Atualmente sou Gerente de
                     TI da prefeitura da minha cidade onde recentemente desenvolvi um sistema para cadastro e
